--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cf-auto-scaling",
+  "name": "cf-auto-scaling-healing",
   "version": "1.0.0",
-  "description": "This simple nodeJS server will be deployed on cloud foundry and will be load tested to showcase cloud foundry's auto-scaling capabilities",
+  "description": "This simple nodeJS server will be deployed on cloud foundry and will be load tested to showcase IBM's cloud foundry's auto-scaling & auto-healing capabilities",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -9,17 +9,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/usfngm/cf-auto-scaling.git"
+    "url": "git+https://github.com/usfngm/cf-auto-scaling-healing.git"
   },
   "author": "Youssef Negm",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/usfngm/cf-auto-scaling/issues"
+    "url": "https://github.com/usfngm/cf-auto-scaling-healing/issues"
   },
-  "homepage": "https://github.com/usfngm/cf-auto-scaling#readme",
+  "homepage": "https://github.com/usfngm/cf-auto-scaling-healing#readme",
   "dependencies": {
     "comma-number": "^2.0.1",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.3"
+    "express": "^4.17.1"
   }
 }
